--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,9 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* Types */
+    "types": ["./types.d.ts"],
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
